internal/api: add import counts to package route
Optionally include imported-by counts in the response to the
package/{path} route.

For golang/go#82016.

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/846945
LUCI-TryBot-Result: golang-scoped@luci-project-accounts.iam.gserviceaccount.com <golang-scoped@luci-project-accounts.iam.gserviceaccount.com>
