# internal/api/openapi.yaml
@@ -269,6 +269,14 @@
             "schema": {
               "type": "boolean"
             }
+          },
+          {
+            "description": "Whether to include counts of packages and modules that are importers of this one.",
+            "in": "query",
+            "name": "imported-by-counts",
+            "schema": {
+              "type": "boolean"
+            }
           }
         ],
         "responses": {
@@ -744,6 +752,17 @@
         },
         "type": "object"
       },
+      "ImportedByCounts": {
+        "properties": {
+          "modules": {
+            "type": "integer"
+          },
+          "packages": {
+            "type": "integer"
+          }
+        },
+        "type": "object"
+      },
       "License": {
         "properties": {
           "contents": {
@@ -853,6 +872,9 @@
           },
           "goos": {
             "type": "string"
+          },
+          "importedByCounts": {
+            "$ref": "#/components/schemas/ImportedByCounts"
           },
           "imports": {
             "items": {
